updated some of the text

--- a/cs260_creative_project2/books.html
+++ b/cs260_creative_project2/books.html
@@ -27,7 +27,7 @@
 
     <h1>Books</h1>
 
-    <p>You can also look up a book by its title or topic.</p>
+    <p>You can also look up a book by its title.</p>
 
     <form>
       <label>Enter a book title or topic</label>
