--- a/cs260_creative_project2/index.html
+++ b/cs260_creative_project2/index.html
@@ -35,7 +35,7 @@
     <p>Welcome Book Dragons! People often mistake us as "bookworms," but we are actually dragons!
     When you love to read, it can be difficult to choose which book to read next. We dragons like
     things to be convenient, so go ahead and browse for your next favorite novel by searching books
-    and authors, thanks to Goodreads. Time to go on an adventure! Raaaawwrrrr!</p>
+    and authors, thanks to openlibrary.org. Time to go on an adventure! Raaaawwrrrr!</p>
       </article>
 
     </section>
